k8s/php-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: ${SERVICE}
  name: ${SERVICE}
spec:
  minReadySeconds: 30
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: ${SERVICE}
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 10%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        seccomp.security.alpha.kubernetes.io/pod: runtime/default
      labels:
        app: ${SERVICE}
    spec:
      containers:
        - image: asia.gcr.io/${PROJECT_ID}/nginx:latest
          imagePullPolicy: Always
          name: nginx
          ports:
            - containerPort: 80
              protocol: TCP
          resources: {}
          securityContext:
            capabilities:
              drop:
                - NET_RAW
          volumeMounts:
            - mountPath: /var/www
              name: www-data
        - envFrom:
            - configMapRef:
                name: ${SERVICE}-cm
          image: asia.gcr.io/${PROJECT_ID}/php:fpm-latest
          name: php
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
          volumeMounts:
            - mountPath: /var/www
              name: www-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 60
      volumes:
        - emptyDir: {}
          name: www-data
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    cloud.google.com/backend-config: '{"default": "healthz"}'
    cloud.google.com/neg: '{"ingress":true}'
  name: ${SERVICE}-svc
spec:
  ports:
    - port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: ${SERVICE}
  sessionAffinity: None
  type: NodePort
status:
  loadBalancer: {}
