k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: gce
    networking.gke.io/v1beta1.FrontendConfig: frontend-config
    networking.gke.io/managed-certificates: certificate-example.com
  name: gateway-ingress
spec:
  rules:
    - host: example.com
      http:
        paths:
          - backend:
              service:
                name: example-svc
                port:
                  number: 80
            path: /*
            pathType: ImplementationSpecific
